# support-kit

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.github/workflows/: web.yml
consumer-example/src/: main.rs
examples/consumer/: Cargo.toml
examples/consumer/src/: main.rs
examples/logging/: Cargo.toml
examples/logging/src/: main.rs
infrastructure/containers/service-kit/: Dockerfile
service-kit/: Cargo.toml
service-kit-core/: Cargo.toml
service-kit-core/src/: cli.rs  client.rs  context.rs  errors.rs  lib.rs  server.rs  settings.rs  telemetry.rs  tui.rs
service-kit-core/src/cli/: client.rs
service-kit-core/src/server/: api.rs
service-kit-core/src/server/web/: assets.rs
service-kit-core/src/settings/: client.rs  configuration.rs  environment.rs  network_settings.rs  server.rs  service.rs
service-kit-core/src/settings/configuration/: logging.rs
service-kit-core/src/tui/: app.rs  clock.rs  display.rs  input.rs  terminal.rs  window.rs
service-kit-dashboard/: astro.config.mjs  package-lock.json  package.json  tsconfig.json
service-kit-dashboard/src/components/: Health.astro
service-kit-dashboard/src/pages/: about.astro  index.astro
service-kit-proto/: Cargo.toml  build.rs
service-kit-proto/protocol/: services.proto
service-kit-proto/protocol/output/: protocol.services.rs
service-kit-support/: Cargo.toml
service-kit-support/src/: args.rs  assets.rs  cli.rs  contexts.rs  errors.rs  lib.rs  service.rs  settings.rs  telemetry.rs  tui.rs
service-kit-support/src/settings/: color.rs  configuration.rs  environment.rs  logging.rs  network.rs  service.rs
service-kit-support/src/storage/: storage_file.rs  storage_path.rs
service-kit-support/src/tui/: action.rs  app.rs  components.rs  config.rs  event.rs  terminal.rs
service-kit-web/: Cargo.toml
service-kit-web/src/: lib.rs
service-kit/src/: lib.rs
support-kit/: CHANGELOG.md  Cargo.toml  todo.md
support-kit-spike/: Cargo.toml
support-kit-spike/logs/: support-kit.debug.log.2024-09-25-12-58  support-kit.debug.log.2024-09-25-13-09  support-kit.debug.log.2024-09-25-13-10  support-kit.debug.log.2024-09-25-13-11  support-kit.debug.log.2024-09-25-13-14  support-kit.debug.log.2024-09-25-13-16  support-kit.debug.log.2024-09-25-13-17  support-kit.debug.log.2024-09-25-13-21  support-kit.debug.log.2024-09-25-13-22  support-kit.debug.log.2024-09-25-13-23  support-kit.debug.log.2024-09-25-13-24  support-kit.debug.log.2024-09-25-13-25  support-kit.debug.log.2024-09-25-13-32  support-kit.debug.log.2024-09-25-13-33  support-kit.debug.log.2024-09-25-13-34  support-kit.debug.log.2024-09-25-13-37  support-kit.debug.log.2024-09-25-13-38  support-kit.debug.log.2024-09-25-13-39  support-kit.debug.log.2024-09-25-13-43  support-kit.debug.log.2024-09-25-15-54  support-kit.debug.log.2024-09-25-15-55  support-kit.debug.log.2024-09-25-15-56  support-kit.debug.log.2024-09-25-15-57  support-kit.debug.log.2024-09-25-16-39  support-kit.log.2024-09-25
support-kit-spike/src/: cli.rs  color.rs  config.rs  env_source_name.rs  environment.rs  level.rs  level_filter.rs  lib.rs  log_rotation.rs  loggers.rs  logging.rs  source.rs  source_name.rs  telemetry.rs
support-kit/examples/: stdout-stderr.rs  usage.rs
support-kit/src/: args.rs  boilerplate.rs  color.rs  config.rs  containers.rs  deploy.rs  deployments.rs  encryption.rs  environment.rs  errors.rs  hosts.rs  lib.rs  logs.rs  network.rs  service.rs  shell.rs  shell_command.rs  sources.rs  ssh.rs  structures.rs  support_control.rs  support_kit_error.rs  verbosity.rs  verbosity_level.rs
support-kit/src/args/: boilerplate_args.rs  deployment_args.rs  service_args.rs
support-kit/src/boilerplate/: boilerplate_context.rs  boilerplate_control.rs  boilerplate_op.rs  boilerplate_preset.rs  boilerplate_template.rs
support-kit/src/boilerplate/templates/: cargo-config.toml  github-workflow-build.yaml  github-workflow-test.yaml  infrastructure-containers-dockerfile
support-kit/src/config/: config_definition.rs  config_env_var.rs  config_file.rs  config_format.rs  config_manifest.rs  config_sources.rs  configuration.rs
support-kit/src/containers/: container_commands.rs  container_control.rs  container_op.rs  container_ops.rs  image_commands.rs  image_control.rs  ops_process.rs
support-kit/src/deployments/: deployment_command.rs  deployment_config.rs  deployment_context.rs  deployment_control.rs  host_deployment_context.rs  image_deployment_context.rs  security_control.rs
support-kit/src/encryption/: password_control.rs  token_control.rs
support-kit/src/hosts/: host_control.rs  host_details.rs  host_session.rs  ssh_connection.rs  ssh_session.rs
support-kit/src/logs/: log_file_config.rs  log_level.rs  log_level_config.rs  log_rotation.rs  log_target.rs  logger_config.rs  logger_preset.rs  logging.rs
support-kit/src/network/: network_config.rs  network_host.rs  network_port.rs
support-kit/src/service/: service_args.rs  service_command.rs  service_config.rs  service_control.rs  service_control_error.rs  service_label.rs  service_name.rs
support-kit/src/structures/: config_or_preset.rs  one_or_many.rs
xtask/: Cargo.toml
xtask/src/: cli.rs  main.rs  runnable.rs  tasks.rs
xtask/src/cli/: container.rs  server.rs  web.rs
xtask/src/cli/web/: client.rs  dashboard.rs
xtask/src/tasks/: container.rs  web.rs
xtask/src/tasks/web/: client.rs  dashboard.rs
