[workspace]
resolver = "2"
members = ["support-kit", "examples/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
support-kit = { version = "0.0.2", path = "./support-kit" }
bon = "2.3.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
convert_case = "0.6.0"
dirs = "5.0.1"
figment = { version = "0.10", features = ["env", "json", "toml", "yaml"] }
owo-colors = { version = "4", features = ["supports-colors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
service-manager = { version = "0.6.1", features = ["clap", "serde"] }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.59"
tracing = { version = "0.1.40", features = ["log"] }
tracing-appender = { version = "0.2.0" }
tracing-subscriber = { version = "0.3.18", features = [
  "chrono",
  "json",
  "env-filter",
  "serde",
  "serde_json",
] }
