[package]
name = "service-kit-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/esmevane/service-kit"
authors = ["Joseph McCormick <esmevane@gmail.com>"]
description = "A service kit for building web services in Rust"
homepage = "https://esmevane.github.io/service-kit"

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
color-eyre = { workspace = true }
config = { workspace = true }
crossterm = { workspace = true }
dialoguer = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
owo-colors = { workspace = true }
ratatui = { workspace = true }
reqwest = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
service-kit-proto = { workspace = true }
service-manager = { workspace = true }
shadow-rs = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
service-kit-support = { workspace = true }
tui-textarea = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }
