[package]
name = "service-kit-support"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/esmevane/service-kit"
authors = ["Joseph McCormick <esmevane@gmail.com>"]
description = "A service kit for building web services in Rust"
homepage = "https://esmevane.github.io/service-kit"

[dependencies]
tracing = { workspace = true }
axum = { workspace = true }
mime_guess = { workspace = true }
rust-embed = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
color-eyre = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
ratatui = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
