[package]
name = "service-kit-web"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"
repository = "https://github.com/esmevane/service-kit"
authors = ["Joseph McCormick <esmevane@gmail.com>"]
description = "A service kit for building web services in Rust"
homepage = "https://esmevane.github.io/service-kit"

[package.metadata]
push = false
tag = false

[package.metadata.dist]
dist = false

[lib]
crate-type = ["cdylib"]

[dependencies]
service-kit-proto = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen-futures"]
