[package]
name = "support-kit"
version = "0.0.1"
description = "Some cli, config, service, and tracing boilerplate for networked applications."
license = "MIT"
edition = "2021"

[dependencies]
bon = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
convert_case = { workspace = true }
figment = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
service-manager = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
figment = { workspace = true, features = ["test"] }
