[package]
name = "support-kit"
version = "0.0.8"
description = "Some cli, config, service, and tracing boilerplate for networked applications."
license = "MIT"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
axum-server = { workspace = true }
bon = { workspace = true }
clap = { workspace = true }
convert_case = { workspace = true }
dirs = { workspace = true }
figment = { workspace = true }
minijinja = { workspace = true }
owo-colors = { workspace = true }
russh = { workspace = true }
rustls-acme = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
service-manager = { workspace = true }
shell-escape = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
figment = { workspace = true, features = ["test"] }
